<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    app:rippleColor="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_item_row_history_trip_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/iv_trip_image_01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundImageViewStyle" />

        <TextView
            android:id="@+id/tv_item_row_history_trip_name"
            style="@style/NarumiTextViewStyle.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/trip_name"
            app:layout_constraintStart_toEndOf="@+id/siv_item_row_history_trip_image"
            app:layout_constraintTop_toTopOf="@+id/siv_item_row_history_trip_image" />

        <ImageView
            android:id="@+id/iv_item_row_history_location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/iv_item_row_history_arrow_next_icon_description"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toEndOf="@+id/siv_item_row_history_trip_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_row_history_trip_name"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_item_row_history_trip_location"
            style="@style/NarumiTextViewStyle.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/trip_location"
            app:layout_constraintBottom_toBottomOf="@+id/iv_item_row_history_location_icon"
            app:layout_constraintStart_toEndOf="@+id/iv_item_row_history_location_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_item_row_history_location_icon" />

        <TextView
            android:id="@+id/tv_item_row_history_trip_order_date"
            style="@style/NarumiTextViewStyle.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/trip_order_date"
            app:layout_constraintBottom_toBottomOf="@+id/siv_item_row_history_trip_image"
            app:layout_constraintStart_toEndOf="@+id/siv_item_row_history_trip_image" />

        <TextView
            android:id="@+id/tv_item_row_history_trip_duration_title"
            style="@style/NarumiTextViewStyle.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/trip_duration_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/siv_item_row_history_trip_image" />

        <TextView
            android:id="@+id/tv_item_row_history_trip_duration"
            style="@style/NarumiTextViewStyle.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/trip_duration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_row_history_trip_duration_title" />

        <TextView
            android:id="@+id/tv_item_row_history_trip_cost"
            style="@style/NarumiTextViewStyle.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/trip_cost"
            android:textColor="@color/color_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>