<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="200dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_item_row_popular_destination_trip_image"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            android:src="@drawable/iv_trip_image_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_item_row_popular_destination_trip_name"
            style="@style/NarumiTextViewStyle.BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:maxLines="1"
            android:text="@string/trip_name"
            android:textColor="@color/neutral_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/siv_item_row_popular_destination_trip_image" />

        <ImageView
            android:id="@+id/iv_item_row_popular_destination_location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/iv_item_row_popular_destination_location_icon_description"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_row_popular_destination_trip_name"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_item_row_popular_destination_trip_location"
            style="@style/NarumiTextViewStyle.BodySmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/trip_location"
            android:textColor="@color/neutral_40"
            app:layout_constraintBottom_toBottomOf="@+id/iv_item_row_popular_destination_location_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_item_row_popular_destination_location_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_item_row_popular_destination_location_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>